[package]
name = "samudra"
version = "0.2.5"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "database", "faker"]

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["fs-write-file", "fs-read-file", "dialog", "dialog-open", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28.2", features = ["full"] }
# ts-rs = "6.2.1"
futures = "0.3.28"
toml = "0.7.6"
chrono = { version = "0.4.26", features = ["serde"] }
database = { path = "database", package = "database" }
tracing-subscriber = "0.3.18"
tracing-appender = "0.2.3"
onc = { git = "https://github.com/Thaza-Kun/bunyi-melayu.git", features = ["serde", "faker"] }
# async-trait = "0.1.73"

# [[test]]
# name = "test_database"
# path = "src-database/src/lib.rs"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
