[package]
name = "src-database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
sea-orm = { version = "0.11.3", default-features = false, features = ["chrono", "runtime-tokio-rustls", "sqlx-sqlite", "macros", "with-chrono"] }
serde = { version = "1.0.173", features = ["derive"] }
