[package]
name = "src-database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
csv = "1.2.2"
diff-struct = "0.5.3"
itertools = "0.11.0"
sea-orm = { version = "0.12.4", default-features = false, features = [
    "chrono",
    "runtime-tokio-rustls",
    "sqlx-sqlite",
    "sqlx-dep",
    "macros",
    "with-chrono",
] }
serde = { version = "1.0.173", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.2", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "chrono",
    "macros",
    "migrate",
] }
ts-rs = "6.2.1"
